package OCP;

//cream o clasa abstracta - un schelet care e baza pentru a putea extinde functionalul ei
public abstract class Boxing {
    public abstract void Boxing();
}
