@startuml

title __OCP's Class Diagram__\n

  namespace OCP {
    class OCP.Box_Type {
        + BoxType()
    }
  }
  

  namespace OCP {
    abstract class OCP.Boxing {
        {abstract} + Boxing()
    }
  }
  

  namespace OCP {
    class OCP.Family_Pizza_Boxing {
        + Boxing()
        + Family_Pizza_Boxing()
    }
  }
  

  namespace OCP {
    class OCP.Italian_Pizza_Boxing {
        + Boxing()
        + Italian_Pizza_Boxing()
    }
  }
  

  namespace OCP {
    class OCP.Large_Pizza_Boxing {
        + Boxing()
        + Large_Pizza_Boxing()
    }
  }
  

  namespace OCP {
    class OCP.Medium_Pizza_Boxing {
        + Boxing()
        + Medium_Pizza_Boxing()
    }
  }
  

  namespace OCP {
    class OCP.Runner {
        {static} + main()
    }
  }
  

  OCP.Family_Pizza_Boxing -up-|> OCP.Boxing
  OCP.Family_Pizza_Boxing o-- SRP.Prepare : prepare
  OCP.Italian_Pizza_Boxing -up-|> OCP.Boxing
  OCP.Italian_Pizza_Boxing o-- SRP.Prepare : prepare
  OCP.Large_Pizza_Boxing -up-|> OCP.Boxing
  OCP.Large_Pizza_Boxing o-- SRP.Prepare : prepare
  OCP.Medium_Pizza_Boxing -up-|> OCP.Boxing
  OCP.Medium_Pizza_Boxing o-- SRP.Prepare : prepare


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
